Fix alignment and naming of timeline illustrations

--- a/src/views/annual-report/2021/annual-report.scss
+++ b/src/views/annual-report/2021/annual-report.scss
@@ -1684,17 +1684,17 @@ img.comment-viz{
             @media #{$timeline-breakpoint} {
                 display: none;
             }
-            .may{
-                display: block;
-                position: absolute;
-                left: 121px;
-                top: 1300px;
-            }
             .june{
                 display: block;
                 position: absolute;
+                left: 121px;
+                top: 1400px;
+            }
+            .august{
+                display: block;
+                position: absolute;
                 right: 58px;
-                top: 2127px;
+                top: 2427px;
             }
             img{
                 display: block;
@@ -1703,13 +1703,13 @@ img.comment-viz{
                     position: absolute;
                     right: 0px;
                 }
-                &.may{
-                    left: 0px;
-                    top: 900px;
-                }
                 &.june{
+                    left: 0px;
+                    top: 1000px;
+                }
+                &.august{
                     right: -50px;
-                    top: 1570px;
+                    top: 1870px;
                 }
             }
         }
